--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -10,6 +10,7 @@
             <a class="navbar-brand logo" href="#/" ng-click="vm.collapseNavbar()">
                 <img class="logo-img" src="content/images/logo.png" alt="logo"/>
                 <span data-translate="global.title">GestC</span> <span class="navbar-version">v{{VERSION}}</span>
+            <span class="label label-success">user :<b>{{vm.account.login}}</b></span>
             </a>
         </div>
         <div class="navbar-collapse" uib-collapse="vm.isNavbarCollapsed" ng-switch="vm.isAuthenticated()">
